# ishan-llms

./: .gitignore  README.md  attention.py  data.py  dataset.py  main.py  pyproject.toml
diskcache/: cache.db
examples/: attn.py  dataloader_example.py  embedding_example.py  pos_embedding_example.py
scratch/: word_2_vec.py
side_quests/: bpe.py  word_2_vec.py
side_quests/tests/: test_build_pairs.py
utils/: constants.py  fetch_text.py
