[project]
name = "ishan-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.hatch.build.targets.wheel.force-include]
"data.py" = "data.py"

[tool.pytest.ini_options]
pythonpath = ["."]
